deploy/target-person-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: target-person-service
spec:
  selector:
    app: target-person-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
