deploy/target-person-service-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: target-person-service
spec:
  to:
    kind: Service
    name: target-person-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
